--- a/app/src/main/res/drawable/category_type_selector.xml
+++ b/app/src/main/res/drawable/category_type_selector.xml
@@ -3,7 +3,7 @@
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
-            <solid android:color="@color/colorPrimaryLight" />
+            <solid android:color="@color/colorExpense" />
         </shape>
     </item>
     <item>
